# cookiemonster

./: .gitattributes  Dockerfile  Makefile  README.md
generic/: cookiecutter.json
generic/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
generic/{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
generic/{{cookiecutter.project_slug}}/docs/: api.md  overview.md
generic/{{cookiecutter.project_slug}}/src/: hello_world.py
generic/{{cookiecutter.project_slug}}/tests/: test_hw.py  utils.py
generic/{{cookiecutter.project_slug}}/tests/features/: hello_world.feature
generic/{{cookiecutter.project_slug}}/tests/steps/: hw_cli.py
jupyter_project/: cookiecutter.json
jupyter_project/{{cookiecutter.project_slug}}/: Makefile  requirements.txt
jupyter_project/{{cookiecutter.project_slug}}/notebooks/: 01_Example_Notebook.ipynb
rocket_project/: cookiecutter.json
rocket_project/{{cookiecutter.project_slug}}/: Cargo.toml  Dockerfile  Makefile
rustic/: cookiecutter.json
rustic/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
rustic/{{cookiecutter.project_slug}}/python/tests/: test_all.py
rustic/{{cookiecutter.project_slug}}/python/{{cookiecutter.project_slug}}/: __init__.py
rustic/{{cookiecutter.project_slug}}/src/: lib.rs
