[build-system]
requires = ["setuptools", "wheel"]

[project]
name = {{cookiecutter.project_slug}}
version = {{cookiecutter.version}}
authors = [
    {name = {{cookiecutter.full_name}}, email = {{cookiecutter.email}}},
]
description = {{cookiecutter.project_short_description}}
readme = "README.md"

dependencies = [
    # Packages required
]
[project.optional-dependencies]
dev = [
    # Development tools to work on this project
    "mkdocs-material==9.5.16",
    "pip-tools==7.4.1",
    "pre-commit==3.7.0"
]
test = [
    # Testing tools to test this project
    "hypothesis==6.100.0",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "behave==1.2.6",
    "tox==4.14.2"
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true